# hcc

./: .dockerignore  Cargo.toml  Dockerfile  hcc-0.0.3.tgz  index.yaml  skaffold.yaml
.github/workflows/: image.yaml  release-chart.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: config.yaml  deployment.yaml  rbac.yaml
src/: adoption_reconciler.rs  lib.rs  main.rs  metadata_reconciler.rs
